typecheck/tests/micro/good/array_arg.c
//call a function with no argument

void apple(int an_array[])
{
return;
}

void main(void)
{
	int an_array[10];
	apple(an_array);
	return;
}
