typecheck/tests/micro/bad/array_e2_void.c
void apple(void)
{return;
}

void main(void)
{
	int a_array[10];
	a_array[apple()];
return;
}
